# fastapi-postgres-crud-example

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: main.py
app/api/: exceptions.py  health.py  root.py
app/api/v1/: __init__.py  notes.py
app/config/: db_settings.py  env_settings.py
app/core/: constants.py
app/repositories/: notes_repository.py
app/repositories/models/: note.py
app/schemas/: note.py
tests/integration/: conftest.py  test_api_health.py  test_api_notes.py  test_api_root.py  test_exception_handlers.py  test_repository.py
tests/unit/: test_repository.py  test_schemas.py
