[project]
name = "notesapi"
version = "0.1.0"
description = "Simple app that connects to a postgres and can perform CRUD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.121.0",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.11.0",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.4",
  "sqlalchemy>=2.0.44",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "pytest-cov>=4.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
